SCSS Fixed minor layout bug in _kss

--- a/app/assets/scss/guide/_kss.scss
+++ b/app/assets/scss/guide/_kss.scss
@@ -100,6 +100,7 @@
 /* Variant layout */
 
 .kss-variant {
+  @include clearfix;
   @include padding(1em null);
 
   &:not(:first-child) {
